--- a/style.css
+++ b/style.css
@@ -18,19 +18,17 @@ header {
 }
 
 main {
-    max-width: 1200px;
     margin: auto;
 
     display: grid;
-    /* grid-row-gap: 1rem; */
-
+    grid-row-gap: 1rem; 
+    
     grid-template-areas: 
-        'video-player video-player'
-        'video-info  video-info'
-        'actions     actions'
-        'channel     subscribe'
-        'up-next     up-next'
-    ;
+        'video-player  video-player'
+        'video-info    video-info'
+        'actions       actions'
+        'channel       subscribe'
+        'up-next       up-next';
 }
 
 .video-player {
@@ -60,10 +58,28 @@ main {
 .ad {
     background-color: #ff5722;
     grid-area: ad;
-    display: none;
 }
 
 .up-next {
     background-color: #3f51b5;
     grid-area: up-next;
 }
+
+@media screen and (max-widht: 700px) {
+    .ad {
+        display: none;
+    }
+}
+
+@media screen and (min-widht: 700px) {
+ main {
+    max-width: 1200px;
+
+    grid-template-areas: 
+    'video-player  video-player  ad'
+    'video-player  video-player  up-next'
+    'video-info    actions       up-next '
+    'channel       subscribe     up-next';
+    }    
+}
+
