--- a/style.css
+++ b/style.css
@@ -183,8 +183,32 @@ main {
 }
 
 .up-next {
-    background-color: #3f51b5;
     grid-area: up-next;
+
+    margin: 1rem;
+}
+
+.up-next a {
+    display: grid;
+    grid-template-columns: 4fr 5fr;
+    grid-gap: 0.5rem;
+    padding-bottom: 0.75rem;
+}
+
+.up-next img {
+    width: 100%;
+}
+
+.up-next h4 {
+    margin: 0.25rem 0;
+    font-size: 9rem;
+    font-weight: normal;
+    text-transform: uppercase;
+}
+
+.up-next p {
+    color: #888;
+    font-size: 0.9rem;
 }
 
 @media screen and (max-widht: 700px) {
