--- a/style.css
+++ b/style.css
@@ -3,51 +3,51 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body {
+  }
+  
+  body {
     background-color: #f9f9f9;
     color: #222;
     font-family: 'Roboto', sans-serif;
-}
-
-header {
+  }
+  
+  header {
     padding: 1rem;
     background-color: white;
     border-bottom: 2px solid #f2f2f2;
-
+  
     display: grid;
     grid-template-columns: auto auto;
     justify-content: space-between;
     align-items: center;
-}
-
-a{
+  }
+  
+  a {
     text-decoration: none;
     color: #222;
-}
-
-.logo img {
+  }
+  
+  .logo img {
     width: 100px;
-}
-
-.search input [type='search'] {
+  }
+  
+  .search input[type='search'] {
     width: 400px;
     padding: 0.5rem;
     border-radius: 2px;
     border: 1px solid #ccc;
-}
-
-.button {
-    padding: 0,25rem 1.5rem;
+  }
+  
+  .button {
+    padding: 0.25rem 1.5rem;
     border: 1px solid #2c5fd5;
     border-radius: 2px;
     color: #2c5fd5;
     font-weight: bold;
-    text-decoration: none;    
-}
-
-.subscribe .button {
+    text-decoration: none;
+  }
+  
+  .subscribe .button {
     border: none;
     background-color: #fb2300;
     color: white;
@@ -56,69 +56,70 @@ a{
     font-size: 0.8rem;
   }
   
-main {
+  main {
     margin: auto;
-
+  
     display: grid;
-    grid-row-gap: 1rem;    
-    grid-template-areas: 
-        'video-player  video-player'
-        'video-info    video-info'
-        'actions       actions'
-        'channel       subscribe'
-        'up-next       up-next';
-}
-
-.video-player {
+    grid-row-gap: 1rem;
+    grid-template-areas:
+      'video-player video-player'
+      'video-info   video-info'
+      'actions      actions'
+      'channel      subscribe'
+      'up-next      up-next';
+  }
+  
+  .video-player {
     grid-area: video-player;
-
+  
     position: relative;
-    padding: 1 rem 0 56.25% 1rem;
+    padding: 1rem 0 56.25% 1rem;
     height: 0;
     overflow: hidden;
     text-align: center;
-}
-
-.video-player iframe,
-.video-player object,
-.video-player embed{
+  }
+  
+  .video-player iframe,
+  .video-player object,
+  .video-player embed {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-}
-.video-info {
+  }
+  
+  .video-info {
     grid-area: video-info;
-
-    padding: 0 0 1rem 1 rem;
-}
-
-.video-info h1 {
+  
+    padding: 0 0 1rem 1rem;
+  }
+  
+  .video-info h1 {
     font-size: 18px;
     font-weight: normal;
     margin-bottom: 1rem;
-}
-
-.video-info .view {
+  }
+  
+  .video-info .views {
     color: #606060;
-}
-
-.actions {
+  }
+  
+  .actions {
     grid-area: actions;
-
+  
     border-bottom: 1px solid #ddd;
-    padding: 0 1rem 0 o.5rem 1rem;
+    padding: 0 1rem 0.5rem 1rem;
     color: #636363;
-
+  
     display: grid;
     grid-template-columns: repeat(5, auto);
     justify-content: space-evenly;
     align-items: end;
     grid-gap: 1rem;
-}
-
-.action {
+  }
+  
+  .action {
     display: grid;
     grid-template-columns: auto auto;
     grid-gap: 0.25rem;
@@ -137,99 +138,104 @@ main {
     fill: currentColor;
   }
   
-.channel {
+  .channel {
     grid-area: channel;
-
+  
     padding: 1rem;
     border-bottom: 1px solid #ddd;
-
+  
     display: grid;
     grid-template-columns: auto auto;
     justify-content: start;
-    grid-gap: 1rem;    
-}
-
-.channel img {
+    grid-gap: 1rem;
+  }
+  
+  .channel img {
     width: 48px;
     border-radius: 50%;
-}
-
-.channel .date {
+  }
+  
+  .channel .date {
     color: #777;
     font-size: 0.8rem;
     margin-bottom: 1rem;
-}
-
-.channel .channel-description{
+  }
+  
+  .channel .channel-description {
     font-size: 0.8rem;
-}
-
-.subscribe {
+  }
+  
+  .subscribe {
     grid-area: subscribe;
-
+  
     padding: 3rem 1rem;
     border-bottom: 1px solid #ddd;
     text-align: right;
-}
-
-.ad {
+  }
+  
+  .ad {
     grid-area: ad;
-
+  
     margin: 1rem;
     padding: 4rem;
     text-align: center;
     background-color: #2196f3;
     color: white;
-}
-
-.up-next {
+  }
+  
+  .up-next {
     grid-area: up-next;
-
+  
     margin: 1rem;
-}
-
-.up-next a {
+  }
+  
+  .up-next a {
     display: grid;
     grid-template-columns: 4fr 5fr;
     grid-gap: 0.5rem;
     padding-bottom: 0.75rem;
-}
-
-.up-next img {
+  }
+  
+  .up-next img {
     width: 100%;
-}
-
-.up-next h4 {
+  }
+  
+  .up-next h4 {
     margin: 0.25rem 0;
-    font-size: 9rem;
+    font-size: 0.9rem;
     font-weight: normal;
     text-transform: uppercase;
-}
-
-.up-next p {
+  }
+  
+  .up-next p {
     color: #888;
     font-size: 0.9rem;
-}
-
-@media screen and (max-widht: 700px) {
+  }
+  
+  @media screen and (max-width: 700px) {
     .search, .ad {
-        display: none;
+      display: none;
     }
-}
-
-@media screen and (min-widht: 700px) {
+  }
+  
+  @media screen and (min-width: 700px) {
     header {
-        grid-template-columns: auto auto auto;
+      grid-template-columns: auto auto auto;
     }
-
+  
     main {
-    max-width: 1200px;
-
-    grid-template-areas: 
-    'video-player  video-player  ad'
-    'video-player  video-player  up-next'
-    'video-info    actions       up-next '
-    'channel       subscribe     up-next';
-    }    
-}
-
+      max-width: 1200px;
+  
+      grid-template-areas:
+        'video-player video-player ad'
+        'video-player video-player up-next'
+        'video-info   actions      up-next'
+        'channel      subscribe    up-next'
+        '.            .            up-next';
+    }
+  
+    .video-info {
+      border-bottom: 1px solid #ddd;
+    }
+  }
+  
